Revise README for clarity on stubs and mocks
Updated the README to clarify the use of stubs and mocks in the projects, including specific examples and corrections to the text for better clarity.